# dark-fac

./: .gitignore  __init__.py  __main__.py  pyproject.toml
.dark-factory/: config.json
.ralph-tui/: progress.md
agents/: __init__.py  design.md  eng-crucible-framework.md  eng-crucible-graduation.md  eng-crucible-scenario.md  issue-interpreter.md  prompts.py  protocol.py  sa-backend.md  sa-code-quality.md  sa-database-web.md  sa-frontend.md  sa-integration-console.md  sa-integration-web.md  sa-lead-console.md  sa-lead-web.md  sa-performance-console.md  sa-performance-web.md  sa-security-console.md  sa-security-web.md  template_engine.py
cli/: commands.py  dispatch.py  handlers.py  ingest.py  main.py  parser.py
core/: MODULE_LOADER_ANALYSIS.md  auto_update.py  config_manager.py  instance_lock.py  migration.py  migration_manifest.yaml  module_loader.py  modules_manifest.yaml  pipeline_logger.py  plugin_loader.py  summarization.py
crucible/: __init__.py  coordinator.py  framework_detect.py  graduation.py  inventory.py  orchestrator.py  repo_provision.py  scenario_gen.py  sharding.py  test_runner.py  twin_runner.py
dispatch/: issue_dispatcher.py
docs/: custom-pipelines.md
engine/: README.md  __init__.py  backends.py  claude_backend.py  config.py  graph.py  json_logger.py  preamble.py  resource_limiter.py  runner.py  sdk.py  stylesheet.py  subgraph.py  transforms.py  types.py  validation.py  variable_expansion.py  workflow_log.py
gates/: __init__.py  ai_security_review.py  contract_validation.py  dependency_scan.py  design_review.py  discovery.py  framework.py  (+9 more)
(+295 files in other folders)
