[project]
name = "dark-factory"
version = "6.0.0-dev"
description = "Automated issue-dispatch pipeline for software factories"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dark_factory"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/test_engine/test_wave2_system_prompts\\.py",
    "tests/test_engine/test_wave8_interactive_subagent\\.py",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.ruff.lint.per-file-ignores]
"ui/interactive_menu.py" = ["E501"]
"tests/test_engine/test_pipeline_engine.py" = ["E501"]
"tests/test_engine/test_wave2_system_prompts.py" = ["E402"]
"tests/test_engine/test_wave8_interactive_subagent.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
